--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.0",
     "file-saver": "^2.0.5",
+    "google-auth-library": "^8.4.0",
+    "googleapis": "^107.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -20,11 +22,13 @@
     "react-dom": "^18.2.0",
     "react-dropbox-chooser": "^0.0.5",
     "react-file-picker-providers": "^1.15.0",
+    "react-gapi": "^1.0.2",
     "react-google-drive-picker": "^1.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
     "typescript": "^4.7.4",
+    "use-dropbox-chooser": "^0.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
