--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "use-dropbox-chooser": "^0.0.5",
     "web-vitals": "^2.1.4"
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@types/react-google-picker": "^0.1.0",
+    "@types/styled-components": "^5.1.26",
     "react-dropbox-chooser-component": "^1.0.0"
   }
 }
